force-app/main/default/objects/PCJAddTypes__c/PCJAddTypes__c.object-meta.xml
<CustomObject>
    <label>Prod Add Types</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Add Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>