force-app/main/default/objects/PCJAddTypes__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipLabel>Prod Add Types</relationshipLabel>
    <relationshipName>Prod_Add_Types</relationshipName>
    <type>Lookup</type>
</CustomField>