force-app/main/default/objects/PCJAddTypes__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>ID in ERP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>