force-app/main/default/objects/PCJAddTypes__c/fields/PCJ__c.field-meta.xml
<CustomField>
    <fullName>PCJ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCJ</label>
    <referenceTo>ProductCategoryJunktion__c</referenceTo>
    <relationshipLabel>Prod Add Types</relationshipLabel>
    <relationshipName>Prod_Add_Types</relationshipName>
    <type>Lookup</type>
</CustomField>