force-app/main/default/objects/PCJAddTypes__c/fields/PrimaryProduct__c.field-meta.xml
<CustomField>
    <fullName>PrimaryProduct__c</fullName>
    <formula>PCJ__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Product</label>
    <type>Text</type>
</CustomField>